Proctoring Assignment for Faculty Member